# Friecipe

./: .env  .gitignore  Data Scince - Fricipe.pptx  Friecipe.nb  README.md  docker-compose.yml
api/: pyproject.toml
api/src/: api.py  constants.py  counter.py  recipe_crawler.py
api/src/lib/: __init__.py  database.py  encoders.py  endpoint.py
scraper/: Dockerfile  README.md  pyproject.toml
scraper/src/: main.py
scraper/src/lib/: __init__.py  cook.py  recipe.py  review.py  scraper.py  scraper_old.py
