[tool.poetry]
name = "friecipe"
version = "0.1.0"
description = ""
authors = ["Sagi Sarussi <sagis@sagis.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
bs4 = "^0.0.1"
pylint = "^2.8.2"
lxml = "^4.6.3"
numpy = "^1.20.2"
selenium = "^3.141.0"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
